--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,22 +65,16 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="91. Decode Ways.cpp">
+    <ClCompile Include="97. Interleaving String.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="92. Reverse Linked List II.cpp">
+    <ClCompile Include="98. Validate Binary Search Tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="93. Restore IP Addresses.cpp">
+    <ClCompile Include="99. Recover Binary Search Tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="94. Binary Tree Inorder Traversal.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="95. Unique Binary Search Trees II.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="96. Unique Binary Search Trees.cpp">
+    <ClCompile Include="100. Same Tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
