--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,13 +65,13 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="332. Reconstruct Itinerary.cpp">
+    <ClCompile Include="417. Pacific Atlantic Water Flow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="337. House Robber III.cpp">
+    <ClCompile Include="473. Matchsticks to Square.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="394. Decode String.cpp">
+    <ClCompile Include="491. Increasing Subsequences.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
