--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,9 +165,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="417. Pacific Atlantic Water Flow.cpp" />
-    <ClCompile Include="473. Matchsticks to Square.cpp" />
-    <ClCompile Include="491. Increasing Subsequences.cpp" />
+    <ClCompile Include="494. Target Sum.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
