update leetcode problem 5084 5086 5087, note: I cannot understand the meaning of 5084 now, I just use other people's solution

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,7 +165,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="494. Target Sum.cpp" />
+    <ClCompile Include="5084. Insufficient Nodes in Root to Leaf Paths.cpp" />
+    <ClCompile Include="5086. Smallest Subsequence of Distinct Characters.cpp" />
+    <ClCompile Include="5087. Letter Tile Possibilities.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
