--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,13 +65,13 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5087. Letter Tile Possibilities.cpp">
+    <ClCompile Include="513. find-bottom-left-tree-value.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5084. Insufficient Nodes in Root to Leaf Paths.cpp">
+    <ClCompile Include="515. find-largest-value-in-each-tree-row.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5086. Smallest Subsequence of Distinct Characters.cpp">
+    <ClCompile Include="529. minesweeper.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
