--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,9 +165,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="513. find-bottom-left-tree-value.cpp" />
-    <ClCompile Include="515. find-largest-value-in-each-tree-row.cpp" />
-    <ClCompile Include="529. minesweeper.cpp" />
+    <ClCompile Include="542. 01-matrix.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
