--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,13 +65,34 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="模拟面试1.cpp">
+    <ClCompile Include="101. symmetric-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1081. Smallest Subsequence of Distinct Characters.cpp">
+    <ClCompile Include="102. binary-tree-level-order-traversal.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="991. broken-calculator.cpp">
+    <ClCompile Include="103. binary-tree-zigzag-level-order-traversal.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="104. maximum-depth-of-binary-tree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="105. construct-binary-tree-from-preorder-and-inorder-traversal.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="106. construct-binary-tree-from-inorder-and-postorder-traversal.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="107. binary-tree-level-order-traversal-ii.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="108. convert-sorted-array-to-binary-search-tree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="109. convert-sorted-list-to-binary-search-tree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="110. balanced-binary-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
