--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -175,6 +175,11 @@
     <ClCompile Include="108. convert-sorted-array-to-binary-search-tree.cpp" />
     <ClCompile Include="109. convert-sorted-list-to-binary-search-tree.cpp" />
     <ClCompile Include="110. balanced-binary-tree.cpp" />
+    <ClCompile Include="111. minimum-depth-of-binary-tree.cpp" />
+    <ClCompile Include="112. path-sum.cpp" />
+    <ClCompile Include="113. path-sum-ii.cpp" />
+    <ClCompile Include="114. flatten-binary-tree-to-linked-list.cpp" />
+    <ClCompile Include="115. distinct-subsequences.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
