--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,10 +65,7 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="116. populating-next-right-pointers-in-each-node.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="117. populating-next-right-pointers-in-each-node-ii.cpp">
+    <ClCompile Include="DWC-2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
