--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="DWC-2.cpp">
+    <ClCompile Include="WC141.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
