--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,10 +65,28 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="427. construct-quad-tree.cpp">
+    <ClCompile Include="118. pascals-triangle.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="437. path-sum-iii.cpp">
+    <ClCompile Include="119. pascals-triangle-ii.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="120. triangle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="121. best-time-to-buy-and-sell-stock.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="122. best-time-to-buy-and-sell-stock-ii.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="123. best-time-to-buy-and-sell-stock-iii.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="124. binary-tree-maximum-path-sum.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="125. valid-palindrome.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
