--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,28 +65,10 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="118. pascals-triangle.cpp">
+    <ClCompile Include="126. word-ladder-ii.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="119. pascals-triangle-ii.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="120. triangle.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="121. best-time-to-buy-and-sell-stock.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="122. best-time-to-buy-and-sell-stock-ii.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="123. best-time-to-buy-and-sell-stock-iii.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="124. binary-tree-maximum-path-sum.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="125. valid-palindrome.cpp">
+    <ClCompile Include="leetcode121-130.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
