--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,8 +165,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="141. linked-list-cycle.cpp" />
-    <ClCompile Include="142. linked-list-cycle-ii.cpp" />
+    <ClCompile Include="143. reorder-list.cpp" />
+    <ClCompile Include="144. binary-tree-preorder-traversal.cpp" />
+    <ClCompile Include="145. binary-tree-postorder-traversal.cpp" />
+    <ClCompile Include="146. lru-cache.cpp" />
+    <ClCompile Include="147. insertion-sort-list.cpp" />
+    <ClCompile Include="148. sort-list.cpp" />
+    <ClCompile Include="149. max-points-on-a-line.cpp" />
+    <ClCompile Include="150. evaluate-reverse-polish-notation.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
