--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -9,10 +9,6 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="资源文件">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="源文件\Array">
       <UniqueIdentifier>{8f7cc73e-10f5-4af3-b0f0-ab8ec0f78293}</UniqueIdentifier>
     </Filter>
@@ -34,12 +30,13 @@
     <Filter Include="源文件\BackTracking">
       <UniqueIdentifier>{4fdb2d0f-9d1b-4cb1-94ee-d32ec61a00d3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="资源文件">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="public.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include.h">
@@ -54,6 +51,9 @@
     <ClInclude Include="BinaryTree.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="public.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -65,10 +65,28 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="141. linked-list-cycle.cpp">
+    <ClCompile Include="143. reorder-list.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="142. linked-list-cycle-ii.cpp">
+    <ClCompile Include="144. binary-tree-preorder-traversal.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="145. binary-tree-postorder-traversal.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="146. lru-cache.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="147. insertion-sort-list.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="148. sort-list.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="149. max-points-on-a-line.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="150. evaluate-reverse-polish-notation.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
