--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,28 +65,7 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="143. reorder-list.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="144. binary-tree-preorder-traversal.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="145. binary-tree-postorder-traversal.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="146. lru-cache.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="147. insertion-sort-list.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="148. sort-list.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="149. max-points-on-a-line.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="150. evaluate-reverse-polish-notation.cpp">
+    <ClCompile Include="模拟面试2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
