--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,12 +165,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="215. kth-largest-element-in-an-array.cpp" />
-    <ClCompile Include="216. combination-sum-iii.cpp" />
-    <ClCompile Include="217. contains-duplicate.cpp" />
-    <ClCompile Include="218. the-skyline-problem.cpp" />
-    <ClCompile Include="219. contains-duplicate-ii.cpp" />
-    <ClCompile Include="220. contains-duplicate-iii.cpp" />
+    <ClCompile Include="221. maximal-square.cpp" />
+    <ClCompile Include="222. count-complete-tree-nodes.cpp" />
+    <ClCompile Include="223. rectangle-area.cpp" />
+    <ClCompile Include="224. basic-calculator.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
