--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,10 +165,16 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="221. maximal-square.cpp" />
-    <ClCompile Include="222. count-complete-tree-nodes.cpp" />
-    <ClCompile Include="223. rectangle-area.cpp" />
-    <ClCompile Include="224. basic-calculator.cpp" />
+    <ClCompile Include="225. implement-stack-using-queues.cpp" />
+    <ClCompile Include="226. invert-binary-tree.cpp" />
+    <ClCompile Include="227. basic-calculator-ii.cpp" />
+    <ClCompile Include="228. summary-ranges.cpp" />
+    <ClCompile Include="229. majority-element-ii.cpp" />
+    <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
+    <ClCompile Include="231. power-of-two.cpp" />
+    <ClCompile Include="232. implement-queue-using-stacks.cpp" />
+    <ClCompile Include="233. number-of-digit-one.cpp" />
+    <ClCompile Include="234. palindrome-linked-list.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
