--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,16 +165,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="225. implement-stack-using-queues.cpp" />
-    <ClCompile Include="226. invert-binary-tree.cpp" />
-    <ClCompile Include="227. basic-calculator-ii.cpp" />
-    <ClCompile Include="228. summary-ranges.cpp" />
-    <ClCompile Include="229. majority-element-ii.cpp" />
-    <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
-    <ClCompile Include="231. power-of-two.cpp" />
-    <ClCompile Include="232. implement-queue-using-stacks.cpp" />
-    <ClCompile Include="233. number-of-digit-one.cpp" />
-    <ClCompile Include="234. palindrome-linked-list.cpp" />
+    <ClCompile Include="235. lowest-common-ancestor-of-a-binary-search-tree.cpp" />
+    <ClCompile Include="236. lowest-common-ancestor-of-a-binary-tree.cpp" />
+    <ClCompile Include="237. delete-node-in-a-linked-list.cpp" />
+    <ClCompile Include="238. product-of-array-except-self.cpp" />
+    <ClCompile Include="239. sliding-window-maximum.cpp" />
+    <ClCompile Include="240. search-a-2d-matrix-ii.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
